ubiquity (2.0.4) UNRELEASED; urgency=low

  * Do not install the live CD kernel in the target system when using
    PAE (LP: #413135).
  * Properly set the kernel version in the main install process when
    using PAE so that symlinks get created for the kernel and initramfs.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 23 Oct 2009 14:58:30 +0100

ubiquity (2.0.3) karmic; urgency=low

  [ Colin Watson ]
  * Use new check-language-support --show-installed option added in
    language-selector 0.4.16, so that we can arrange to keep language
    support packages installed that are already present in the live
    filesystem.

  [ Mario Limonciello ]
  * Pass the debug parameters to ubiquity even if running in noninteractive
    mode.
  * Don't provide the old init scripts, even under a temporary name anymore.
    - It appears that there is a race condition that can exist between when
      the upstart'ified version and the initscript version start that may cause
      only-ubiquity and automatic-ubiquity to (poorly) fail. (LP: #457858)    
    - All login managers in use (gdm and kdm) have converted to upstart now.

  [ Evan Dandrea ]
  * Calculate the amount of available memory in check-kernels (LP: #413135).
  * Automatic update of included source packages: grub-installer
    1.43ubuntu7.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 23 Oct 2009 08:11:00 +0100

ubiquity (2.0.2) karmic; urgency=low

  [ Evan Dandrea ]
  * Properly set the size of the partition to be created upon resizing
    in the KDE frontend (LP: #455580).
  * Hide the encrypt home radio button in the KDE frontend when in oem-config
    mode (LP: #455479).

  [ Colin Watson ]
  * KDE frontend: Fix incorrect error message when the slideshow doesn't
    exist.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 20 Oct 2009 16:09:07 +0100

ubiquity (2.0.1) karmic; urgency=low

  [ Evan Dandrea ]
  * Check to see whether X crashed or ubiquity crashed before attempting